# rs-fstat2json

./: Cargo.toml  README.md  rs-fstat2json  run.sh
src/: main.rs  stat.rs
src/stat/: least.rs
